fix: border-radius issue on iOS (retry)

--- a/src/styles.less
+++ b/src/styles.less
@@ -614,7 +614,7 @@ button.kanban-plugin__lane-settings-button + button.kanban-plugin__lane-settings
     padding-inline: 8px;
     border: 1px solid var(--background-modifier-border);
     background-color: var(--background-primary);
-    border-radius: var(--input-radius);
+    border-radius: var(--radius-m);
     min-height: var(--input-height);
   }
 }
@@ -687,7 +687,7 @@ button.kanban-plugin__new-item-button {
 .kanban-plugin__item {
   font-size: 0.875rem;
   border: 1px solid var(--background-modifier-border);
-  border-radius: var(--input-radius);
+  border-radius: var(--radius-m);
   overflow: hidden;
   transition: 300ms opacity cubic-bezier(0.25, 1, 0.5, 1);
 
